.htaccess and headers
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk@8 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/.htaccess
+++ b/.htaccess
@@ -21,3 +21,13 @@ AddType application/x-httpd-php .php
 	Order deny,allow
 	Deny from all
 </Location>
+
+<LocationMatch ^.svn>
+	Order deny,allow
+	Deny from all
+</LocationMatch>
+
+<Location po>
+	Order deny,allow
+	Deny from all
+</Location>
