- fixed .htaccess <Location*/<Directory* errors - changed main CSS to show the correct version number - added revised GPL v3 license text to the main CSS - updated screenshot.png - changed README.txt to ASCII
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk/func@10 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,6 @@
+# Tunings
+Options -Indexes
+
 # Disallow access to certain files
 <FilesMatch ^\.>
 	Deny from all
@@ -10,10 +13,6 @@
 <FilesMatch ^functions\.>
 	Deny from all
 </FilesMatch>
-
-<LocationMatch ^\.svn>
-	Deny from all
-</LocationMatch>
 
 <FilesMatch \.php$>
 	Deny from all
