- fixed .htaccess <Location*/<Directory* errors - changed main CSS to show the correct version number - added revised GPL v3 license text to the main CSS - updated screenshot.png - changed README.txt to ASCII
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk@10 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/.htaccess
+++ b/.htaccess
@@ -1,33 +1,18 @@
 # Enforce PHP mime types
 AddType application/x-httpd-php .php
 
+# Tunings
+Options -Indexes
+
 # Disallow access to certain files
-<FilesMatch ^\.>
-	Order deny,allow
-	Deny from all
-</Files>
-
-<FilesMatch \.txt$>
-	Order deny,allow
+<FilesMatch "^\.">
 	Deny from all
 </FilesMatch>
 
-<FilesMatch ^functions\.>
-	Order deny,allow
+<FilesMatch "\.txt$">
 	Deny from all
 </FilesMatch>
 
-<Location func>
-	Order deny,allow
+<FilesMatch "^functions\.">
 	Deny from all
-</Location>
-
-<LocationMatch ^\.svn>
-	Order deny,allow
-	Deny from all
-</LocationMatch>
-
-<Location po>
-	Order deny,allow
-	Deny from all
-</Location>
+</FilesMatch>
