--- a/admin/.htaccess
+++ b/admin/.htaccess
@@ -1,3 +1,6 @@
+# Tunings
+Options -Indexes
+
 # Disallow access to certain files
 <FilesMatch ^\.>
 	Deny from all
@@ -10,7 +13,3 @@
 <FilesMatch ^functions\.>
 	Deny from all
 </FilesMatch>
-
-<LocationMatch ^\.svn>
-	Deny from all
-</LocationMatch>
