--- a/iplugs/ptviewer/.htaccess
+++ b/iplugs/ptviewer/.htaccess
@@ -1,3 +1,7 @@
+
+# Tunings
+Options -Indexes
+
 # Disallow access to certain files
 <FilesMatch ^\.>
 	Deny from all
@@ -10,7 +14,3 @@
 <FilesMatch ^functions\.>
 	Deny from all
 </FilesMatch>
-
-<LocationMatch ^\.svn>
-	Deny from all
-</LocationMatch>
