--- a/js/.htaccess
+++ b/js/.htaccess
@@ -1,10 +1,13 @@
+# Tunings
+Options -Indexes
+
 # Disallow access to certain files
+<Files .htaccess>
+order allow,deny
+deny from all
+</Files>
+
 <FilesMatch ^\.>
 	Order deny,allow
 	Deny from all
-</Files>
-
-<LocationMatch ^\.svn>
-	Order deny,allow
-	Deny from all
-</LocationMatch>
+</FilesMatch>
