- Administration now shows an error message if YAPB was not installed
git-svn-id: file:///home/markus/dev/mine/legacy/wp-grain-code.svn/theme/trunk/func@19 6f6cd8cf-4e4d-0410-922c-de2976d17fed

--- a/.htaccess
+++ b/.htaccess
@@ -14,6 +14,10 @@ Options -Indexes
 	Deny from all
 </FilesMatch>
 
+<FilesMatch ^class\.>
+	Deny from all
+</FilesMatch>
+
 <FilesMatch \.php$>
 	Deny from all
 </FilesMatch>
